# project2prompt

./: LICENSE  README.md  pyproject.toml
project2prompt/: main.py
